alignments correction in LoginModal Component

--- a/src/Components/CarsList.css
+++ b/src/Components/CarsList.css
@@ -26,7 +26,7 @@
 .card{
     cursor: pointer;
     box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.2);
-    border: 1px solid rgb(107, 107, 107);
+    border: 1px solid rgb(176, 176, 176);
 }
 .bi-car-front{
     margin-right: 5px;
