--- a/src/Components/LoginModal.css
+++ b/src/Components/LoginModal.css
@@ -1,5 +1,5 @@
 .error{
-    color : red
+    color : rgb(195, 4, 4)
 }
 .form{
     margin: 20px;
